--- a/_output.yml
+++ b/_output.yml
@@ -11,7 +11,7 @@ bookdown::gitbook:
     sharing:
       github: yes
       all: ['facebook', 'twitter', 'github', 'linkedin', 'weibo', 'instapaper']
-    download: "pdf"
+    download: no
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
