--- a/_output.yml
+++ b/_output.yml
@@ -11,7 +11,7 @@ bookdown::gitbook:
     sharing:
       github: yes
       all: ['facebook', 'twitter', 'github', 'linkedin', 'weibo', 'instapaper']
-    download: no
+    download: yes
     ga: "G-1PKNTHL5YP"
 bookdown::pdf_book:
   includes:
